@@ -1,0 +1,2 @@
+package Foo::Bar;
+1;
