@@ -1,0 +1,2 @@
+package Alpha::Beta;
+1;
