@@ -1,0 +1,2 @@
+package Gamma::Delta;
+1;
