@@ -1,6 +1,7 @@
 Revision history for Test-CleanNamespaces
 
 {{$NEXT}}
+  - properly find the list of modules to test (regression since 0.19)
 
 0.21      2016-08-16 01:31:28Z
   - no changes since 0.20
